--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "es6-promise": "^4.2.6",
+        "foundation-sites": "^6.5.3",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "vue-router": "^3.0.6",
+        "vuex": "^3.1.1"
     }
 }
